Fix: Decrease the number of columns as the screen width decreases
Use grid instead of flexbox to achieve this. With flex-wrap: wrap; there is too much extra space on some screen widths.

--- a/note-app/style.css
+++ b/note-app/style.css
@@ -27,13 +27,13 @@ body {
 }
 
 .container {
-  width: 80%;
-  margin: 3.2rem auto;
+  padding: 3.2rem;
 }
 
 .notes {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 20rem);
+  justify-content: center;
   gap: 2rem;
 }
 
